# raves-default-cpp23-project

./: CMakeLists.txt  CMakeListsold.txt  LICENSE-MIT  README  README.md
src/: main.cpp  test.cppm
src/game/: dictionary.cppm  five_word.cppm
src/word/: testword.cppm  word.cppm
test/: basic_test.cpp
test/game/: five_word_test.cpp
